-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: repo-shenandoah
-
Component/s: hotspot
Old regions that are not evacuated in a mixed collection need to be made parsable at the start of concurrent marking for old. If an old region is pinned during the final mark of the old generation, it will not be added to the collection set for mixed evacuations and subsequently will not be made parsable when the next old collection runs.