8329790: GenShen: Old regions that are pinned during final mark are not made parseable

Reviewed-by: kdnilsen